# ChangeLog for mail-mta/courier
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-mta/courier/ChangeLog,v 1.69 2006/04/27 22:24:37 marienz Exp $

  27 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-courier-0.48.1, files/digest-courier-0.48.1-r1,
  files/digest-courier-0.48.2.20050224, files/digest-courier-0.49.0,
  files/digest-courier-0.49.0.20050405, files/digest-courier-0.50.0,
  files/digest-courier-0.50.1, files/digest-courier-0.50.1-r1, Manifest:
  Fixing SHA256 digest, pass four

  02 Mar 2006; Brian Jackson <iggy@gentoo.org> courier-0.52.2.ebuild:
  added libpcre as a dep, bug 123900, thanks to Marco Iseli ismaATsfsservices.biz

  19 Feb 2006; Brian Jackson <iggy@gentoo.org> +courier-0.52.2.ebuild:
  version bump

*courier-0.52.2 (19 Feb 2006)

  25 Dec 2005; Diego Pettenò <flameeyes@gentoo.org>
  courier-0.50.1-r1.ebuild:
  Use root:0, not root:root.

*courier-0.50.1-r1 (29 Jul 2005)

  29 Jul 2005; Brian Jackson <iggy@gentoo.org> +courier-0.50.1-r1.ebuild:
  revbump with some changes. it's -*, and I'd like to get some testing

  11 Jul 2005; Bryan Østergaard <kloeri@gentoo.org>
  courier-0.48.1-r1.ebuild:
  Stable on alpha + ia64, bug 97915.

  11 Jul 2005; Tobias Scherbaum <dertobi123@gentoo.org>
  courier-0.48.1-r1.ebuild:
  ppc stable, #97915

  11 Jul 2005; Simon Stelling <blubb@gentoo.org> courier-0.48.1-r1.ebuild:
  stable on amd64 wrt bug 97915

  11 Jul 2005; Rene Nussbaumer <killerfox@gentoo.org>
  courier-0.48.1-r1.ebuild:
  Stable on hppa. bug #97915

  11 Jul 2005; Jason Wever <weeve@gentoo.org> courier-0.48.1-r1.ebuild:
  Stable on SPARC wrt security bug #97915.

  10 Jul 2005; Andrej Kacian <ticho@gentoo.org> courier-0.48.1-r1.ebuild:
  Stable on x86.

*courier-0.48.1-r1 (10 Jul 2005)

  10 Jul 2005; Andrej Kacian <ticho@gentoo.org>
  +files/courier-0.48.1-spf-error-handling.patch, +courier-0.48.1-r1.ebuild: