@@ -1,0 +1,3 @@
+MD5 9ac1f892dcd2505a85d4e60edb61120c courier-0.53.2.tar.bz2 6942557
+RMD160 a6efce3a8d6572923190ea49ed6085906317ebd8 courier-0.53.2.tar.bz2 6942557
+SHA256 0b44e02652084ca4023646ca0cdd3d173dcbadf919e81aa012b42666b3acf726 courier-0.53.2.tar.bz2 6942557
